webhook endpoint fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,8 +29,8 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --button: #00ffbf;
-    --hoverButtonColor: #62ffd8;
+    --button: #008080;
+    --hoverButtonColor: #20B2AA;
 
   }
 
